Removed bg on event description, prevent wrapping on description. Also allow blank value on 'location' and 'address' fields in Event and Occurrence.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ p {
   background-color: #FBFBEF;
   border-right: 1px solid lightgray;
   min-height: 350px;
-  width: 680px;
+  width: 710px;
 }
 
 #content_container {
@@ -197,7 +197,7 @@ p {
 #sidebar_wrapper {
   background-color: #F1F1C6;
   float: right;
-  width: 278px;
+  width: 248px;
 }
 
 #sidebar {
@@ -210,7 +210,7 @@ p {
 }
 
 #sidebar li {
-  font-size: 110%;
+  font-size: 100%;
   padding: 5px 0;
 }
 
